finished touching up navbar for now

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
           <li><a href="#" class="nav-link">Ram Quality</a></li>
           <li><a href="#" class="nav-link">Prices</a></li>
           <li><a href="#" class="nav-link">Buy Now</a></li>
-          <a href="#"
+          <!-- Mobile button will be used for mobile version when I've learned JS -->
+          <!-- <a href="#"
             ><button class="Button" id="mobile-button">Get Started</button></a
-          >
+          > -->
         </ul>
         <div class="burger">
           <div class="burgerlines"></div>
@@ -60,6 +61,6 @@
       <input id="submit" type="submit" value="Get Started" class="btn" />
     </form>
 
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
