starting landing view branch

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Product Landing Page Sample</title>
+    <title>Product Landing Page FCC</title>
   </head>
   <body>
     <header id="header">
@@ -38,7 +38,7 @@
     <!-- End Navbar -->
 
     <!-- Start Landing View -->
-
+    <div class="landing-view"></div>
     <!-- End Landing View -->
 
     <iframe
