--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         />
 
         <ul>
-          <li><a href="#" class="nav-link">Ram Quality</a></li>
-          <li><a href="#" class="nav-link">Prices</a></li>
+          <li><a href="#vid" class="nav-link">Ram Quality</a></li>
+          <li><a href="#prices" class="nav-link">Prices</a></li>
           <!-- Mobile button will be used for mobile version when I've learned JS -->
           <!-- <a href="#"
             ><button class="Button" id="mobile-button">Get Started</button></a
@@ -29,54 +29,124 @@
           <div class="burgerlines"></div>
           <div class="burgerlines"></div>
         </div>
-        <a href="#"
-          ><button class="Button" id="desktop-button">Get Started</button></a
+        <a href="#sectionL" class="nav-link">
+          <button class="Button" id="corner-button">Get Started</button></a
         >
       </nav>
     </header>
     <!-- End Navbar -->
+    <main>
+      <!-- Start Landing View -->
+      <section class="landingview">
+        <h1>Unlimited high-speed downloadable RAM</h1>
+        <img
+          src="https://cdn.pixabay.com/photo/2015/03/21/06/42/ram-683250_960_720.png"
+          alt="ram"
+        />
+        <a href="#">
+          <button class="Button" id="desktop-button">
+            Get Started Now
+          </button>
+        </a>
+      </section>
+      <!-- End Landing View -->
 
-    <!-- Start Landing View -->
-    <div class="landingview">
-      <h1>Download Your RAM Today</h1>
-      <img
-        src="https://cdn.pixabay.com/photo/2015/03/21/06/42/ram-683250_960_720.png"
-        alt="ram"
-      />
-      <p>Unlimited high-speed RAM now available at your disposal</p>
-      <a href="#"
-        ><button class="Button" id="desktop-button">Get Started Now</button></a
-      >
-    </div>
-    <!-- End Landing View -->
+      <!-- Start video and features -->
+      <section class="video-features" id="vid">
+        <iframe
+          src="https://www.youtube.com/embed/-7kDiamS3cc"
+          frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+          id="video"
+          allowfullscreen
+        ></iframe>
+        <div>
+          <ul>
+            <li>Incredible rates</li>
+            <li>speeds up to 88 MPH</li>
+            <li>100% virtual and hardware free</li>
+            <li>100% legit</li>
+          </ul>
+        </div>
+        <a href="#">
+          <button class="Button" id="desktop-button">
+            Get Started Now
+          </button>
+        </a>
+      </section>
 
-    <!-- Start video and features -->
-    <div class="video-features">
-      <iframe
-        src="https://www.youtube.com/embed/-7kDiamS3cc"
-        frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        id="video"
-        allowfullscreen
-      ></iframe>
-      <div>
-        <ul>
-          <li>Incridble rates</li>
-          <li>speeds up to 88 MPH</li>
-          <li>100% virtual and hardware free</li>
-          <li>100% legit</li>
-        </ul>
-      </div>
-    </div>
-    <!-- <form action="https://www.freecodecamp.com/email-submit" id="form">
-      <input
-        type="email"
-        name="email"
-        id="email"
-        placeholder="Enter Email Address Here"
-      />
-      <input id="submit" type="submit" value="Get Started" class="btn" />
-    </form> -->
+      <!-- End video and features -->
+
+      <!-- start Pricing -->
+      <section class="pricing" id="prices">
+        <div class="col">
+          <ul class="price-box">
+            <li></li>
+            <li class="box-header">Simple</li>
+            <li class="emph">$5.99 / Month</li>
+            <li>8GB Ram</li>
+            <li>DDR4 2600Mhz</li>
+            <li class="emph"><button class="Button">Get Started</button></li>
+          </ul>
+        </div>
+        <dsv class="col">
+          <ul class="price-box best">
+            <li></li>
+            <li class="box-header">Moderate</li>
+            <li class="emph">$8.99 / Month</li>
+            <li>16GB Ram</li>
+            <li>DDR4 3200Mhz</li>
+            <li class="emph"><button class="Button">Get Started</button></li>
+          </ul>
+        </dsv>
+        <div class="col">
+          <ul class="price-box">
+            <li></li>
+            <li class="box-header">Advance</li>
+            <li class="emph">$13.99 / Month</li>
+            <li>32GB Ram</li>
+            <li>DDR4 3600Mhz</li>
+            <li class="emph"><button class="Button">Get Started</button></li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- End Pricing Section -->
+      <section class="form-input" id="sectionL">
+        <form action="https://www.freecodecamp.com/email-submit" id="form">
+          <h1>Get Started Now</h1>
+          <div>
+            <label for="fname" class="stretch">First Name:</label>
+            <input
+              type="text"
+              name="fname"
+              id="fname"
+              placeholder="First Name"
+            />
+          </div>
+          <div>
+            <label for="email" class="stretch">Email:</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Enter Email Address Here"
+            />
+          </div>
+          <div>
+            <input type="radio" name="package" id="simple" />
+            <label for="simple">Simple</label>
+            <input type="radio" name="package" id="moderate" />
+            <label for="moderate">Moderate</label>
+            <input type="radio" name="package" id="advanced" />
+            <label for="advanced">Advanced</label>
+          </div>
+
+          <button class="Button" id="desktop-button">Get Started</button>
+          <input type="submit" value="" id="submit" />
+        </form>
+      </section>
+    </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
